# Signal-Conso

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  prefect.yaml  pyproject.toml  pytest.ini  requirements-flows.txt  requirements.txt
.github/workflows/: ci.yaml
dbt/: .env.example  .sqlfluff  .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: normalize_text.sql
dbt/models/: sources.yml
dbt/models/marts/: mart_signalconso.sql
dbt/models/staging/: stg_signalconso.sql
docs/: architecture.md
scripts/: init_prefect_results_gcs.py  pipeline.py
src/app/api/: main.py
src/app/api/routes/: flows.py  health.py  predictions.py  tickets.py
src/app/api/schemas/: prediction.py
src/app/core/: config.py
src/app/dashboard/: dashboard.py
src/app/flows/: signal_conso_flows.py
src/app/ingestion/: extract.py  transform.py
src/app/ml/: predict.py  train.py
src/app/services/: bigquery_service.py  gcs_service.py
tests/: test_api_main.py  test_api_routes.py  test_bigquery_service.py  test_dashboard.py  test_extract.py  test_gcs_service.py  test_pipeline.py  test_predict.py  test_signal_conso_flows.py  test_train.py  test_transform.py
