[project]
name = "signalconso"
version = "0.1.0"
description = "Plateforme intelligente de traitement automatique des signalements et de priorisation des demandes clients"
requires-python = ">=3.11,<3.13"

dependencies = [
    "dbt-core",
    "dbt-bigquery",
    "fastapi[standard]==0.111.0",
    "uvicorn[standard]==0.34.0",
    "streamlit==1.56.0",
    "pandas>=2.2",
    "numpy>=1.24",
    "scikit-learn==1.5.2",
    "joblib==1.5.2",
    "matplotlib==3.8.0",
    "seaborn==0.12.2",
    "wordcloud>=1.9",
    "plotly==5.15.0",
    "google-api-core (>=2.30.1,<3.0.0)",
    "google-cloud-storage==2.16.0",
    "requests==2.31.0",
    "python-dotenv==1.2.2",
    "sqlalchemy>=2.0",
    "pydantic (>=2.10,<3.0)",
    "redis==5.0.4",
    "httpx (<0.28)",
    "prefect (>=3.7.0,<4.0.0)",
    "prefect-gcp (>=0.6.18,<0.7.0)"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.4.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = [".git", ".venv", "dist", "build"]

[tool.poetry]
name = "signalconso"
version = "0.1.0"
packages = [{include = "app", from = "src"}]

[tool.ruff]
line-length = 100
target-version = "py311"

exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    "dbt/dbt_packages",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
